--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -46,7 +46,7 @@
       "no_results_html": "Your search for \"{{ terms }}\" did not yield any results.",
       "results_for_html": "Your search for \"{{ terms }}\" revealed the following:",
       "title": "Search our store",
-      "placeholder": "Search",
+      "placeholder": "What are you looking for ?",
       "submit": "Search"
     },
     "breadcrumbs": {
