Add warning message on Cart when delivery dates has not been chosen

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -289,6 +289,7 @@
       "invalid_dates": "Selected dates are not valid",
       "same_dates": "Please select 3 different Delivery/Pickup dates",
       "empty_dates": "Please select 3 preferred Delivery/Pickup dates",
+      "empty_delivery": "Please select your delivery type",
       "delivery_soil_level_mix": "Your order will be delivered within the next 7-10 days, and you'll receive a text message from us the day before your delivery with your delivery time.",
       "notes_placeholder": "example: product placement if delivered, narrow roads, dead ends, gate code, etc.",
       "cannot_mix_methods": "Pickups and Deliveries cannot be combined in the same order.",
