--- a/locales/cs.json
+++ b/locales/cs.json
@@ -12,7 +12,7 @@
     },
     "404": {
       "title": "404 Stránka nenalezena",
-      "subtext_html": "Stránka, o kterou žádáte, neexistuje. Klikněte <a href=\"{{ link }}\">sem</a> a pokračujte v nakupování."
+      "subtext_html": "Stránka, o kterou žádáte, neexistuje. Klikněte <a href=\"{{ link }}\">sem<\/a> a pokračujte v nakupování."
     },
     "password_page": {
       "login_form_heading": "Vstup do obchodu pomocí hesla",
@@ -21,7 +21,7 @@
       "login_form_submit": "Zadat",
       "signup_form_email_label": "E-mail",
       "signup_form_success": "Těsně než otevřeme, pošleme vám e-mail!",
-      "admin_link_html": "Jste majitelem obchodu? <a href=\"/admin\" class=\"text-link\">Přihlaste se zde</a>",
+      "admin_link_html": "Jste majitelem obchodu? <a href=\"\/admin\" class=\"text-link\">Přihlaste se zde<\/a>",
       "password_link": "Vstoupit pomocí hesla",
       "powered_by_shopify_html": "Tento obchod poběží na platformě {{ shopify }}"
     },
@@ -88,14 +88,14 @@
       "note": "Zvláštní pokyny pro prodávajícího",
       "subtotal": "Mezisoučet",
       "taxes_and_shipping_at_checkout": "Daně a poštovné se vypočítají v pokladně",
-      "taxes_and_shipping_policy_at_checkout_html": "Daně a <a href=\"{{ link }}\">poštovné</a> se vypočítá v pokladně",
+      "taxes_and_shipping_policy_at_checkout_html": "Daně a <a href=\"{{ link }}\">poštovné<\/a> se vypočítá v pokladně",
       "taxes_included_but_shipping_at_checkout": "Daně a poštovné se vypočítají v pokladně",
-      "taxes_included_and_shipping_policy_html": "Včetně daní. <a href=\"{{ link }}\">Poštovné</a> se vypočítá v pokladně.",
+      "taxes_included_and_shipping_policy_html": "Včetně daní. <a href=\"{{ link }}\">Poštovné<\/a> se vypočítá v pokladně.",
       "update": "Aktualizovat košík",
       "checkout": "Pokladna",
       "empty": "Váš košík je momentálně prázdný.",
       "cookies_required": "K použití nákupního košíku musíte povolit cookies",
-      "continue_browsing_html": "Pokračovat v prohlížení <a href=\"{{ link }}\">zde</a>.",
+      "continue_browsing_html": "Pokračovat v prohlížení <a href=\"{{ link }}\">zde<\/a>.",
       "savings_html": "Ušetříte {{ price }}",
       "continue_shopping": "Pokračovat v nákupu"
     },
@@ -153,7 +153,7 @@
       "address1": "adresa 1",
       "address2": "adresa 2 (volitelné)",
       "city": "Město",
-      "country": "Země/region",
+      "country": "Země\/region",
       "province": "Provincie",
       "zip": "PSČ",
       "phone": "Telefon",
@@ -240,7 +240,7 @@
     "map": {
       "address_error": "Chyba při hledání této adresy",
       "address_no_results": "Žádné výsledky pro tuto adresu",
-      "address_query_limit_html": "Je překročen limit použití API Google. Zvažte upgrade na <a href=\"https://developers.google.com/maps/premium/usage-limits\">plán Premium</a>.",
+      "address_query_limit_html": "Je překročen limit použití API Google. Zvažte upgrade na <a href=\"https:\/\/developers.google.com\/maps\/premium\/usage-limits\">plán Premium<\/a>.",
       "auth_error_html": "Při ověřování vašeho účtu Map Google došlo k problému."
     },
     "slideshow": {
@@ -286,7 +286,7 @@
       "on_sale_from_html": "Na prodej od {{ price }}",
       "from_text_html": "Z {{ price }}",
       "include_taxes": "Včetně daní.",
-      "shipping_policy_html": "<a href=\"{{ link }}\">Poštovné</a> se vypočítá v pokladně.",
+      "shipping_policy_html": "<a href=\"{{ link }}\">Poštovné<\/a> se vypočítá v pokladně.",
       "quantity": "Množství",
       "add_to_cart": "Přidat do košíku",
       "item_added_to_cart": "Položka přidána do košíku!",
