--- a/locales/hr-HR.json
+++ b/locales/hr-HR.json
@@ -12,7 +12,7 @@
     },
     "404": {
       "title": "404 Stranica nije pronađena",
-      "subtext_html": "Stranica koju si zatražio ne postoji. Klikni <a href=\"{{ link }}\">ovdje</a> da bi nastavio kupnju."
+      "subtext_html": "Stranica koju si zatražio ne postoji. Klikni <a href=\"{{ link }}\">ovdje<\/a> da bi nastavio kupnju."
     },
     "password_page": {
       "login_form_heading": "Uđite u trgovinu pomoću lozinke",
@@ -21,7 +21,7 @@
       "login_form_submit": "Unesi",
       "signup_form_email_label": "Pošalji e-poruku",
       "signup_form_success": "Poslat ćemo vam poruku e-pošte neposredno prije nego što otvorimo!",
-      "admin_link_html": "Jeste li vlasnik trgovine? <a href=\"/admin\" class=\"text-link\">Prijavite se ovdje</a>",
+      "admin_link_html": "Jeste li vlasnik trgovine? <a href=\"\/admin\" class=\"text-link\">Prijavite se ovdje<\/a>",
       "password_link": "Uđite pomoću lozinke",
       "powered_by_shopify_html": "Trgovinu pokreće {{ shopify }}"
     },
@@ -88,14 +88,14 @@
       "note": "Posebne upute za prodavatelja",
       "subtotal": "Podzbroj",
       "taxes_and_shipping_at_checkout": "Porezi i poštarina obračunavaju se prilikom završetka kupnje",
-      "taxes_and_shipping_policy_at_checkout_html": "Porezi i <a href=\"{{ link }}\">poštarina</a> obračunavaju se prilikom završetka kupnje",
+      "taxes_and_shipping_policy_at_checkout_html": "Porezi i <a href=\"{{ link }}\">poštarina<\/a> obračunavaju se prilikom završetka kupnje",
       "taxes_included_but_shipping_at_checkout": "Uključeni porezi i poštarina obračunavaju se prilikom završetka kupnje",
-      "taxes_included_and_shipping_policy_html": "Porez je uključen. <a href=\"{{ link }}\">Poštarina </a> se obračunava prilikom završetka kupnje.",
+      "taxes_included_and_shipping_policy_html": "Porez je uključen. <a href=\"{{ link }}\">Poštarina <\/a> se obračunava prilikom završetka kupnje.",
       "update": "Ažuriraj košaricu",
       "checkout": "Završi kupnju",
       "empty": "Vaša je košarica trenutno prazna.",
       "cookies_required": "Omogućite kolačiće da biste koristili košaricu",
-      "continue_browsing_html": "Nastavi pregledavanje <a href=\"{{ link }}\">ovdje</a>.",
+      "continue_browsing_html": "Nastavi pregledavanje <a href=\"{{ link }}\">ovdje<\/a>.",
       "savings_html": "Štediš {{ price }}",
       "continue_shopping": "Nastavi s kupnjom"
     },
@@ -153,8 +153,8 @@
       "address1": "Adresa 1",
       "address2": "Adresa 2",
       "city": "Grad",
-      "country": "Država / regija",
-      "province": "Županija / pokrajina",
+      "country": "Država \/ regija",
+      "province": "Županija \/ pokrajina",
       "zip": "Poštanski broj",
       "phone": "Telefon",
       "set_default": "Postavi kao zadanu adresu",
@@ -240,7 +240,7 @@
     "map": {
       "address_error": "Pogreška prilikom traženja te adrese",
       "address_no_results": "Nema rezultata za tu adresu",
-      "address_query_limit_html": "Premašili ste ograničenje upotrebe Google API-ja. Razmislite o nadogradnji na <a href=\"https://developers.google.com/maps/premium/usage-limits\">tarifu Premium</a> .",
+      "address_query_limit_html": "Premašili ste ograničenje upotrebe Google API-ja. Razmislite o nadogradnji na <a href=\"https:\/\/developers.google.com\/maps\/premium\/usage-limits\">tarifu Premium<\/a> .",
       "auth_error_html": "Došlo je do problema s provjerom autentičnosti računa za Google karte."
     },
     "slideshow": {
@@ -250,7 +250,7 @@
       "play": "Reproduciraj prezentaciju",
       "load_slide": "Učitaj slajd {{ slide_number }}",
       "active_slide": "Slajd {{ slide_number }}, trenutni",
-      "navigation_instructions": "Pomičite se po prezentaciji pomoću strelica lijevo/desno ili prijeđite prstom ulijevo/udesno ako koristite mobilni uređaj"
+      "navigation_instructions": "Pomičite se po prezentaciji pomoću strelica lijevo\/desno ili prijeđite prstom ulijevo\/udesno ako koristite mobilni uređaj"
     }
   },
   "layout": {
@@ -286,7 +286,7 @@
       "on_sale_from_html": "Na akciji od {{ price }}",
       "from_text_html": "Od {{ price }}",
       "include_taxes": "Porez je uključen.",
-      "shipping_policy_html": "<a href=\"{{ link }}\">Poštarina </a> se obračunava prilikom završetka kupnje.",
+      "shipping_policy_html": "<a href=\"{{ link }}\">Poštarina <\/a> se obračunava prilikom završetka kupnje.",
       "quantity": "Količina",
       "add_to_cart": "Dodaj u košaricu",
       "item_added_to_cart": "Proizvod dodan u košaricu!",
