get live changes (2020-04-27)

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -279,12 +279,12 @@
       "first_off_truck": "Before 9AM ($149.99)",
       "pickup": "Pickup in store",
       "check_available_dates": "Check available dates",
-      "choose_delivery_type_html": "Step 1: Choose your delivery type",
+      "choose_delivery_type_html": "Step 1: Choose Option <br> **Perishable-Must Install Same Day**",
       "standard_delivery_explanation": "Between 7AM and 5PM-Text w\/2hr window sent day before",
       "before_noon_explanation": "Guaranteed before 12PM",
       "first_off_truck_explanation": "Guaranteed before 9AM",
       "no_date_available": "There are no available dates for your choice",
-      "delivery_title_html": "Step 2: Preferred Delivery\/Pickup Dates",
+      "delivery_title_html": "Step 2: Preferred Delivery\/Pickup Dates <br> **Perishable-Must Install Same Day**",
       "delivery_message": "Note: Fluctuations in demand (time of year) and weather can play a key role in our ability to meet one of your preferred dates.  After our online sales team processes your order, you will receive a confirmation email with your pickup or delivery date. Our online sales team processes orders Monday through Friday 8AM to 5PM. Orders placed on Saturday and Sunday will be processed the following Monday.",
       "invalid_dates": "Selected dates are not valid",
       "same_dates": "Please select 3 different Delivery\/Pickup dates",
