--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -291,14 +291,14 @@
       "same_dates": "Please select 3 different Delivery\/Pickup dates",
       "empty_dates": "Please select 3 preferred Delivery\/Pickup dates",
       "empty_delivery": "Please select your delivery type",
-      "delivery_soil_level_mix": "Due to high demand your BigYellowBag of Soil³ Compost and\/or Level Mix will be delivered on or before May 29th.  Please be on the lookout for a text message from us the day before your delivery with your delivery time window.",
+      "delivery_soil_level_mix": "Due to high demand your BigYellowBag of Soil³ Compost and\/or Level Mix will be delivered on or before June 6th.  Please be on the lookout for a text message from us the day before your delivery with your delivery time window.",
       "notes_placeholder": "example: product placement if delivered, narrow roads, dead ends, gate code, etc.",
       "cannot_mix_methods": "Pickups and Deliveries cannot be combined in the same order.",
       "no_checkout_available": "An error ocurred while processing your request",
       "chosen_delivery_address": "Delivery address",
       "chosen_delivery_address_message": "Your product(s) will be delivered to the address listed above.  If this is not the correct delivery address, please go back to the product page and enter your desired delivery address.",
       "select_option_in_step_one": "To select your dates, please choose an option in Step 1",
-      "confirm_phone_number": "Mobile Phone Number (Required for Delivery Updates and Communication)",
+      "confirm_phone_number": "Mobile Phone Number (Required for Pickup\/Delivery Texts)",
       "no_phone_number_added": "Please add your phone number"
     },
     "checkout": {
